fix: text-alignment for work description

--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -145,6 +145,10 @@
     }
   }
 
+  p {
+    text-align: center;
+  }
+
   .app__work-tag {
     position: absolute;
     padding: 0.5rem 1rem;
